@@ -60,9 +60,9 @@
 <table class="inspector-data">
 
 	<tr class="even">
-		<td><a jwcid="restart"><img jwcid="restartButton"/></a>
+		<td><a jwcid="restart" target="_new"><img jwcid="restartButton"/></a>
 		</td>
-		<td>Restart the application (in this window).
+		<td>Restart the application (in a new window).
 		</td>
 	</tr>
 
